# infra

./: .gitmodules  flake.nix
home/users/logan/: default.nix
hosts/wsl/: configuration.nix
hosts/yoga/: configuration.nix  hardware-configuration.nix
modules/: home-manager.nix  hyprland.nix  nix.nix  nixos.nix  pipewire.nix  polkit.nix  sddm.nix  sudo.nix  tailscale.nix  wayland.nix
modules/desktop-environments/: hyprland.nix  plasma6.nix
modules/desktop-shell/: .clang-format  .gitignore  CMakeLists.txt  flake.nix  result
modules/desktop-shell/scripts/: dev.sh
modules/desktop-shell/src/: Application.cpp  Application.h  BarWidget.cpp  BarWidget.h  VolumeIconWidget.cpp  VolumeIconWidget.h  Widget.cpp  Widget.h  Window.cpp  Window.h  WorkspaceWidget.cpp  WorkspaceWidget.h  main.cpp  percentage.cpp  percentage.h
modules/desktop-shell/src/services/: battery_service.cpp  battery_service.h
modules/desktop-shell/src/widgets/: battery_indicator_widget.cpp  battery_indicator_widget.h  style.cpp  style.h
modules/home-manager/: ignis.nix
modules/home-manager/ags/: flake.nix  watch-and-restart.sh
modules/home-manager/desktop-shell/: .gitignore  flake.nix  style.scss
modules/zen-browser/: flake.nix  result
system/: hyprland.nix  nix.nix  nixos.nix  sound.nix  sudo.nix  virtualbox.nix  wireshark.nix
system/modules/: docker.nix  home-manager.nix  hyprland.nix  network-manager.nix  nix.nix  nixos.nix  plasma6.nix  polkit.nix  systemd-boot.nix  tailscale.nix  wireshark.nix
themes/: tokyonight-night.nix  tokyonight.nix
users/: logan.nix
users/logan/: default.nix  home.nix  nixos-pkgs.nix  pkgs.toml  theme.nix
users/logan/git/: default.nix
users/logan/hyprland/: default.nix  settings.nix
users/logan/neovim/: default.nix
users/logan/nix-search-cli/: default.nix
(+24 files in other folders)
